--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,33 @@
 sonar.projectKey=AnaLacramioaraNastasescu_travistest
-sonar.organization=252931
-
-# this is the name and version displayed in the SonarCloud UI.
 sonar.projectName=travistest
-sonar.projectVersion=1.0
- 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-# This property is optional if sonar.modules is set. 
-sonar.sources=.
- 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+
+# =====================================================
+#   Meta-data for the project
+# =====================================================
+
+sonar.links.homepage=https://github.com/Z/A
+sonar.links.ci=https://travis-ci.org/Z/A
+sonar.links.scm=https://github.com/Z/A
+sonar.links.issue=https://github.com/Z/A/issues
+
+
+# =====================================================
+#   Properties that will be shared amongst all modules
+# =====================================================
+
+sonar.host.url=https://sonarcloud.io
+sonar.organization=252931
+sonar.login="cdcc0d9e0acaa840502013a42554b6fbca6f16e3"
+sonar.sources=src
+sonar.language=java
+
+
+
+# =====================================================
+#   Java config
+# =====================================================
+sonar.java.source=1.8
+sonar.java.binaries=.
+
+# Debug
+sonar.verbose=true
