--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
-sonar.projectKey=AnaLacramioaraNastasescu_travistest
-sonar.projectName=travistest
+sonar.projectKey=252931
+sonar.projectName=AnaLacramioaraNastasescu_travistest
 
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/Z/A
-sonar.links.ci=https://travis-ci.org/Z/A
-sonar.links.scm=https://github.com/Z/A
-sonar.links.issue=https://github.com/Z/A/issues
+sonar.links.homepage=https://github.com/AnaLacramioaraNastasescu/travistest
+sonar.links.ci=https://travis-ci.org/AnaLacramioaraNastasescu/travistest
+sonar.links.scm=https://github.com/AnaLacramioaraNastasescu/travistest
+sonar.links.issue=https://github.com/AnaLacramioaraNastasescu/travistest/issues
 
 
 # =====================================================
@@ -16,7 +16,7 @@ sonar.links.issue=https://github.com/Z/A/issues
 # =====================================================
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization=252931
+sonar.organization=AnaLacramioaraNastasescu
 sonar.login="cdcc0d9e0acaa840502013a42554b6fbca6f16e3"
 sonar.sources=src
 sonar.language=java
