--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk:
     - openjdk8
 addons:
-    organization: 252931
+    organization: AnaLacramioaraNastasescu
     token:
         secure: "cdcc0d9e0acaa840502013a42554b6fbca6f16e3"
 script:
