--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=252931
-sonar.projectName=AnaLacramioaraNastasescu_travistest
+sonar.projectName=travistest
 
 # =====================================================
 #   Meta-data for the project
