--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: java
 jdk:
     - openjdk8
 addons:
-    organization: AnaLacramioaraNastasescu
-    token:
-        secure: "cdcc0d9e0acaa840502013a42554b6fbca6f16e3"
+    sonarcloud:
+        organization: AnaLacramioaraNastasescu
+        token:
+            secure: "cdcc0d9e0acaa840502013a42554b6fbca6f16e3"
 script:
     - ant build
     - sonar-scanner
