--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,7 +16,7 @@ sonar.links.issue=https://github.com/AnaLacramioaraNastasescu/travistest/issues
 # =====================================================
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization=AnaLacramioaraNastasescu
+sonar.organization=0252931
 sonar.login="cdcc0d9e0acaa840502013a42554b6fbca6f16e3"
 sonar.sources=src
 sonar.language=java
